@@ -31,6 +31,9 @@ public:
 	//! Returns the ISO_639-1 language list
 	static QMap<QString,QString> list();
 
+	//! List with the most used languages
+	static QMap<QString,QString> most_used_list();
+
 	//! Returns the list of translations available
 	static QMap<QString,QString> translations();
 
